# MLOps

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  cloud_build_and_deploy.yaml  cloudbuild.yaml  current_data.csv  data.dvc  data_drift_report.html  image_data_drift.py  image_drift.py  index.html  none.ipynb  pyproject.toml  requirements.txt  requirements_api.txt  requirements_dev.txt  tasks.py  train.sh
.dvc/: config
.github/workflows/: deploy-docs.yaml  pre-commit.yaml  test_and_build.yaml  tests.yaml
configs/: config.yaml
data_drift/: current_data.csv  data_drift_report.html  image_data_drift.py  reference_data.csv
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml  mkdocs.yml
docs/source/: index.md
docs/source/documents/: api.md  contributing.md  guide.md  index.md
documents/api/: index.html
documents/contributing/: index.html
documents/guide/: index.html
reports/: README.md  report.py
search/: search_index.json
src/mlops_project/: api.py  data.py  evaluate.py  frontend.py  model.py  test.ipynb  train.py  visualize.py
src/mlops_project/wandb/: latest-run
tests/: locust_load_testing.py  test_api.py  test_data.py  test_model.py
vertex-ai/: config_cpu.yaml  config_gpu.yaml
wandb/: latest-run
wandb/run-20250109_182452-n7b1ua5h/: run-n7b1ua5h.wandb
wandb/run-20250109_182452-n7b1ua5h/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250112_123637-u3oce62d/: run-u3oce62d.wandb
wandb/run-20250112_130851-ojanj41v/: run-ojanj41v.wandb
(+9 files in other folders)
