[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_project"
version = "0.0.1"
description = "None"
authors = [
    { name = "Lin zhu, Boyang Xu, Wenji Xie", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
